<resources>
    <string name="app_name" translatable="false">PocketBoy</string>
    <string name="app_disclaimer">This software will run applications for the Nintendo 3DS handheld game console. No game titles are included.\n\nBefore you can begin with emulating, please select a folder to store PocketBoy\'s user data in.\n\nWhat\'s this:\n<a href='https://web.archive.org/web/20240304193549/https://github.com/pocketboy-emu/pocketboy/wiki/PocketBoy-Android-user-data-and-storage'>Wiki - PocketBoy Android user data and storage</a></string>
    <string name="app_notification_channel_name" translatable="false">PocketBoy</string>
    <string name="app_notification_channel_id" translatable="false">PocketBoy</string>
    <string name="app_notification_channel_description">PocketBoy 3DS emulator notifications</string>
    <string name="app_notification_running">PocketBoy is Running</string>
    <string name="app_game_install_description">Next, you will need to select an Applications Folder. PocketBoy will display all of the 3DS ROMs inside of the selected folder in the app.\n\nCIA ROMs, updates and DLC will need to be installed separately by clicking on the folder icon and selecting Install CIA.</string>
    <string name="grid_menu_core_settings">Settings</string>
    <string name="home_options">Options</string>
    <string name="home_search">Search</string>
    <string name="home_games">Applications</string>
    <string name="settings_description">Configure emulator settings</string>
    <string name="install_game_content">Install CIA file</string>
    <string name="install_game_content_description">Install applications, updates or DLC</string>
    <string name="share_log">Share Log</string>
    <string name="share_log_description">Share PocketBoy\'s log file to debug issues</string>
    <string name="gpu_driver_manager">GPU Driver Manager</string>
    <string name="install_gpu_driver">Install GPU driver</string>
    <string name="install_gpu_driver_description">Install alternative drivers for potentially better performance or accuracy</string>
    <string name="driver_already_installed">Driver already installed</string>
    <string name="custom_driver_not_supported">Custom drivers not supported</string>
    <string name="custom_driver_not_supported_description">Custom driver loading isn\'t currently supported for this device.\nCheck this option again in the future to see if support was added!</string>
    <string name="share_log_not_found">No log file found</string>
    <string name="select_games_folder">Select Applications Folder</string>
    <string name="select_games_folder_description">Allows PocketBoy to populate the application list</string>
    <string name="about">About</string>
    <string name="pocketboy_description">An open-source 3DS emulator</string>
    <string name="about_description">Build version, credits, and more</string>
    <string name="games_dir_selected">Application directory selected</string>
    <string name="select_pocketboy_user_folder_home_description">Changes the files that PocketBoy uses to load applications</string>
    <string name="theme_and_color_description">Modify the look of the app</string>
    <string name="install_cia_title">Install CIA</string>
    <string name="warning_3ds_files"><![CDATA[Encrypted files and .3ds files are no longer supported. Decrypting and/or renaming to .cci may be necessary. <a href="https://pocketboy-emu.org/blog/game-loading-changes/">Learn more.</a>]]></string>
    <string name="select_gpu_driver">Select GPU driver</string>
    <string name="select_gpu_driver_title">Would you like to replace your current GPU driver?</string>
    <string name="select_gpu_driver_install">Install</string>
    <string name="select_gpu_driver_default">Default</string>
    <string name="select_gpu_driver_install_success">Installed %s</string>
    <string name="select_gpu_driver_use_default">Using default GPU driver</string>
    <string name="select_gpu_driver_error">Invalid driver selected, using system default!</string>
    <string name="system_gpu_driver">System GPU driver</string>
    <string name="installing_driver">Installing driver…</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="contributors">Contributors</string>
    <string name="contributors_description">Contributors who made PocketBoy possible</string>
    <string name="contributors_link" translatable="false">https://github.com/pocketboy-emu/pocketboy/graphs/contributors</string>
    <string name="licenses_description">Projects used by PocketBoy for Android</string>
    <string name="build">Build</string>
    <string name="licenses">Licenses</string>
    <string name="support_link" translatable="false">https://discord.gg/4ZjMpAp3M6</string>
    <string name="website_link" translatable="false">https://pocketboy-emu.org/</string>
    <string name="github_link" translatable="false">https://github.com/pocketboy-emu/pocketboy</string>
    <string name="welcome">Welcome!</string>
    <string name="welcome_description">Learn how to set up &lt;b>PocketBoy&lt;/b> and jump into emulation.</string>
    <string name="get_started">Get started</string>
    <string name="step_complete">Complete!</string>
    <string name="games">Applications</string>
    <string name="games_description">Select your &lt;b>Applications&lt;/b> folder with the button below.</string>
    <string name="done">Done</string>
    <string name="done_description">You\'re all set.\nEnjoy using the emulator!</string>
    <string name="text_continue">Continue</string>
    <string name="notifications">Notifications</string>
    <string name="notifications_description">Grant the notification permission with the button below.</string>
    <string name="give_permission">Grant permission</string>
    <string name="notification_warning">Skip granting the notification permission?</string>
    <string name="notification_warning_description">PocketBoy won\'t be able to notify you of important information.</string>
    <string name="camera_permission">Camera</string>
    <string name="camera_permission_description">Grant the camera permission below to emulate the 3DS camera.</string>
    <string name="microphone_permission">Microphone</string>
    <string name="microphone_permission_description">Grant the microphone permission below to emulate the 3DS microphone.</string>
    <string name="permission_denied">Permission denied</string>
    <string name="add_games_warning">Skip selecting applications folder?</string>
    <string name="add_games_warning_description">Software won\'t be displayed in the Applications list if a folder isn\'t selected.</string>
    <string name="add_games_warning_help" translatable="false">https://web.archive.org/web/20240304210021/https://pocketboy-emu.org/wiki/dumping-game-cartridges/</string>
    <string name="permissions">Permissions</string>
    <string name="select_emulator_data_folders">Data Folders</string>
    <string name="select_emulator_data_folders_description"><![CDATA[Select data folders<br/>(User folder is required)]]></string>
    <string name="permissions_description">Grant optional permissions to use specific features of the emulator</string>
    <string name="warning_help">Help</string>
    <string name="warning_skip">Skip</string>
    <string name="warning_cancel">Cancel</string>
    <string name="select_pocketboy_user_folder">Select User Folder</string>
    <string name="select_pocketboy_user_folder_description"><![CDATA[Select your <a href="https://web.archive.org/web/20240304193549/https://github.com/pocketboy-emu/pocketboy/wiki/PocketBoy-Android-user-data-and-storage">user data</a> directory with the button below.]]></string>
    <string name="select_which_user_directory_to_use">You appear to have user directories set for both PocketBoy and PocketBoy. This is likely because you upgraded to PocketBoy, and when prompted chose a different user directory than what was being used for PocketBoy.\n\nThis may have resulted in you thinking you lost saves or other settings - we apologize if that happened.\n\nWould you like to go back to using your original PocketBoy user directory, restoring settings and save games from PocketBoy, or keep your current PocketBoy user directory?\n\nNeither directory will be deleted, regardless of your choice, and you may freely switch between them using the Select User Folder option.</string>
    <string name="keep_current_pocketboy_directory">Keep Current PocketBoy Directory</string>
    <string name="use_prior_pocketboy_directory">Use Prior PocketBoy Directory</string>
    <string name="select">Select</string>
    <string name="cannot_skip">You can\'t skip setting up the user folder</string>
    <string name="cannot_skip_directory_description">This step is required to allow PocketBoy to work. Please select a directory and then you can continue.</string>
    <string name="selecting_user_directory_without_write_permissions">You have lost write permissions on your <a href="https://web.archive.org/web/20240304193549/https://github.com/pocketboy-emu/pocketboy/wiki/PocketBoy-Android-user-data-and-storage">user data</a> directory, where saves and other information are stored. This can happen after some app or Android updates. Please re-select the directory to regain permissions so you can continue.</string>
    <string name="cannot_skip_directory_help" translatable="false">https://web.archive.org/web/20240304193549/https://github.com/pocketboy-emu/pocketboy/wiki/PocketBoy-Android-user-data-and-storage</string>
    <string name="set_up_theme_settings">Theme Settings</string>
    <string name="setup_theme_settings_description">Configure your theme preferences for PocketBoy.</string>
    <string name="setup_set_theme">Set Theme</string>
    <string name="search_and_filter_games">Search and Filter Applications</string>
    <string name="home_search_games">Search Applications</string>
    <string name="search_recently_played">Recently Played</string>
    <string name="search_recently_added">Recently Added</string>
    <string name="search_installed">Installed</string>
    <string name="controller_circlepad">Circle Pad</string>
    <string name="controller_c">C-Stick</string>
    <string name="controller_hotkeys">Hotkeys</string>
    <string name="controller_triggers">Triggers</string>
    <string name="controller_trigger">Trigger</string>
    <string name="controller_dpad">D-Pad</string>
    <string name="controller_dpad_axis">D-Pad (Axis)</string>
    <string name="controller_dpad_axis_description">Some controllers may not be able to map their D-pad as an axis. If that\'s the case, use the D-Pad (buttons) section.</string>
    <string name="controller_dpad_button">D-Pad (Button)</string>
    <string name="controller_dpad_button_description">Only map the D-pad to these if you\'re facing issues with the D-Pad (Axis) button mappings.</string>
    <string name="controller_axis_vertical">Up/Down Axis</string>
    <string name="controller_axis_horizontal">Left/Right Axis</string>
    <string name="direction_up">Up</string>
    <string name="direction_down">Down</string>
    <string name="direction_left">Left</string>
    <string name="direction_right">Right</string>
    <string name="input_dialog_title">Bind %1$s %2$s</string>
    <string name="input_dialog_description">Press or move an input.</string>
    <string name="input_binding">Input Binding</string>
    <string name="3ds_no_games_found">No games found</string>
    <string name="3ds_top_screen">Top Screen</string>
    <string name="3ds_bottom_screen">Bottom Screen</string>
    <string name="3ds_top">TOP</string>
    <string name="3ds_bottom">BOTTOM</string>
    <string name="menu">Menu</string>
    <string name="settings">Settings</string>
    <string name="applications">Applications</string>
    <string name="refresh">Refresh</string>
    <string name="favorites">Favorites</string>
    <string name="recent">Recent</string>
</resources>